--- a/app/src/main/res/layout/chat_item_self.xml
+++ b/app/src/main/res/layout/chat_item_self.xml
@@ -1,6 +1,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="10dp"
     android:gravity="right"
     android:orientation="vertical"
     android:paddingBottom="5dp"
@@ -17,13 +19,14 @@
     <TextView
         android:id="@+id/message"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_alignParentRight="true"
         android:layout_marginRight="10dp"
-        android:background="@drawable/bg_bubble_self"
+        android:background="@android:color/holo_orange_dark"
+        android:padding="7dp"
+        android:textColor="@android:color/white"
         android:textIsSelectable="true"
-        android:textSize="14sp"
-        android:textColor="@android:color/white"/>
+        android:textSize="18sp" />
 
 
 </LinearLayout>
