--- a/app/src/main/res/layout/chat_item_watson.xml
+++ b/app/src/main/res/layout/chat_item_watson.xml
@@ -2,26 +2,25 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="10dp"
     android:orientation="horizontal">
 
     <android.support.v7.widget.AppCompatImageView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
-        android:src="@mipmap/ic_face" />
+        android:layout_height="match_parent"
+        android:src="@mipmap/ic_launcher" />
 
     <TextView
         android:id="@+id/message"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
-        android:layout_marginBottom="10dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
-        android:layout_marginTop="5dp"
-        android:background="@drawable/bg_bubble_watbot"
+        android:background="@color/bg_colorboot"
         android:fontFamily="sans-serif"
-        android:textColor="@android:color/black"
+        android:padding="7dp"
+        android:textColor="@color/cast_libraries_material_featurehighlight_text_header_color"
         android:textIsSelectable="true"
         android:textSize="14sp" />
 
