--- a/app/src/main/res/layout/content_chat_room.xml
+++ b/app/src/main/res/layout/content_chat_room.xml
@@ -11,8 +11,8 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="70dp"
         android:scrollbars="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
@@ -21,6 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
+        android:layout_marginBottom="20dp"
         android:background="@android:color/white"
         android:orientation="horizontal"
         android:weightSum="4">
@@ -33,18 +34,20 @@
             android:background="@null"
             android:elevation="0dp"
             android:paddingLeft="10dp"
-            android:scaleType="fitCenter"
-            android:src="@mipmap/ic_mic" />
+            android:scaleType="fitCenter" />
 
         <EditText
             android:id="@+id/message"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
+
             android:layout_weight="3"
-            android:background="@null"
-            android:hint="@string/what_s_on_your_mind"
+
+            android:hint="Ingrese su mensaje ..."
+            android:inputType="textMultiLine"
             android:lines="1"
             android:paddingLeft="10dp" />
 
@@ -56,17 +59,19 @@
             android:text="ASK"
             android:textSize="16dp"
             android:textColor="@color/colorPrimary" />-->
+
+
         <android.support.v7.widget.AppCompatImageButton
             android:id="@+id/btn_send"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginBottom="10dp"
             android:layout_weight="1"
-            android:background="@null"
+android:background="@drawable/border_send"
             android:elevation="0dp"
             android:paddingLeft="10dp"
             android:scaleType="fitCenter"
-            android:src="@mipmap/ic_send" />
+            android:src="@drawable/send" />
 
 
     </LinearLayout>
