--- a/app/src/main/res/drawable/backgroud_splash.xml
+++ b/app/src/main/res/drawable/backgroud_splash.xml
@@ -7,7 +7,7 @@
     <item>
         <bitmap
             android:gravity="center"
-            android:src="@drawable/sinfon"/>
+            android:src="@drawable/lis"/>
 
     </item>
 
