--- a/app/src/main/res/layout/content_chat_room.xml
+++ b/app/src/main/res/layout/content_chat_room.xml
@@ -28,24 +28,24 @@
 
         <android.support.v7.widget.AppCompatImageButton
             android:id="@+id/btn_record"
-            android:layout_width="wrap_content"
+            android:layout_width="61dp"
             android:layout_height="match_parent"
             android:layout_marginBottom="10dp"
-            android:background="@null"
+            android:background="@drawable/voz"
             android:elevation="0dp"
             android:paddingLeft="10dp"
             android:scaleType="fitCenter" />
 
         <EditText
             android:id="@+id/message"
-            android:layout_width="wrap_content"
+            android:layout_width="223dp"
             android:layout_height="match_parent"
+            android:layout_marginBottom="10dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="10dp"
-            android:layout_marginBottom="10dp"
 
             android:layout_weight="3"
-
+android:textColor="@color/cardview_dark_background"
             android:hint="Ingrese su mensaje ..."
             android:inputType="textMultiLine"
             android:lines="1"
@@ -63,7 +63,7 @@
 
         <android.support.v7.widget.AppCompatImageButton
             android:id="@+id/btn_send"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginBottom="10dp"
             android:layout_weight="1"
