--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,9 @@
     <color name="bg_bubble_watbot">#ecf0f1</color>
     <color name="bg_colorboot">#f50057</color>
     <color name="bg_color"> #40c4ff</color>
+    <color name="bg_colorbot"> #d6d6d6</color>
+
+    #d6d6d6
 
 
 
