--- a/app/src/main/res/layout/activity_splach2.xml
+++ b/app/src/main/res/layout/activity_splach2.xml
@@ -26,29 +26,29 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="33dp"
+        android:layout_marginBottom="65dp"
         android:fontFamily="casual"
         android:text="ChatBot"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-        android:textColor="@color/colorAccent"
-        android:textSize="30sp"
+        android:textColor="@color/bg_color"
+        android:textSize="36sp"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="38dp"
+        android:layout_marginTop="35dp"
         android:fontFamily="casual"
-        android:text="LIM"
+        android:text="Lynn"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-        android:textColor="@color/colorAccent"
-        android:textSize="50sp"
+        android:textColor="@color/bg_color"
+        android:textSize="100sp"
         android:textStyle="bold" />
 </RelativeLayout>
