--- a/app/src/main/res/layout/chat_item_self.xml
+++ b/app/src/main/res/layout/chat_item_self.xml
@@ -2,9 +2,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="10dp"
     android:gravity="right"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:paddingBottom="5dp"
     android:paddingLeft="16dp">
 
@@ -16,7 +17,24 @@
         android:layout_marginBottom="5dp"
         android:layout_marginRight="10dp"
         android:fontFamily="sans-serif" />-->
-    <TextView
+
+    <com.github.library.bubbleview.BubbleTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="7dp"
+        android:textSize="17dp"
+        android:textColor="@android:color/white"
+        app:arrowWidth="8dp"
+        app:angle="8dp"
+
+        android:id="@+id/message"
+        app:arrowHeight="14dp"
+        app:arrowPosition="14dp"
+        app:arrowLocation="right"
+        app:arrowCenter="true"
+        app:bubbleColor="#FF5722"/>
+
+    <!--<TextView
         android:id="@+id/message"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
@@ -26,7 +44,7 @@
         android:padding="7dp"
         android:textColor="@android:color/white"
         android:textIsSelectable="true"
-        android:textSize="18sp" />
+        android:textSize="18sp" />-->
 
 
 </LinearLayout>
