--- a/app/src/main/res/layout/chat_item_watson.xml
+++ b/app/src/main/res/layout/chat_item_watson.xml
@@ -2,15 +2,32 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:gravity="center_vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="10dp"
     android:orientation="horizontal">
 
     <android.support.v7.widget.AppCompatImageView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:src="@mipmap/ic_launcher" />
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:background="@drawable/lis" />
 
-    <TextView
+    <com.github.library.bubbleview.BubbleTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="7dp"
+        android:textColor="@android:color/white"
+        app:arrowWidth="8dp"
+        app:angle="8dp"
+        android:textSize="17dp"
+        android:id="@+id/message"
+        app:arrowHeight="10dp"
+        app:arrowPosition="14dp"
+        app:arrowLocation="left"
+        app:arrowCenter="true"
+        app:bubbleColor="#b456f7"/>
+
+    <!-- <TextView
         android:id="@+id/message"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
@@ -22,7 +39,7 @@
         android:padding="7dp"
         android:textColor="@color/cast_libraries_material_featurehighlight_text_header_color"
         android:textIsSelectable="true"
-        android:textSize="14sp" />
+        android:textSize="14sp" />-->
 
 
 </LinearLayout>
