--- a/app/src/main/res/layout/content_chat_room.xml
+++ b/app/src/main/res/layout/content_chat_room.xml
@@ -13,43 +13,68 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="70dp"
+        android:background="@color/cardview_dark_background"
         android:scrollbars="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="20dp"
-        android:background="@android:color/white"
+        android:background="@android:color/transparent"
         android:orientation="horizontal"
+        android:padding="7dp"
         android:weightSum="4">
 
         <android.support.v7.widget.AppCompatImageButton
             android:id="@+id/btn_record"
-            android:layout_width="61dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_marginBottom="10dp"
-            android:background="@drawable/voz"
-            android:elevation="0dp"
-            android:paddingLeft="10dp"
-            android:scaleType="fitCenter" />
 
-        <EditText
-            android:id="@+id/message"
-            android:layout_width="223dp"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginRight="7dp"
+            android:background="@drawable/border_send"
+            android:elevation="4dp"
+            android:padding="10dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/voz" />
 
-            android:layout_weight="3"
-android:textColor="@color/cardview_dark_background"
+
+        <!--<android.support.design.widget.TextInputLayout
+            android:id="@+id/textInputLayout2"
+            android:layout_width="245dp"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+
+            android:background="@drawable/btn_mensaje"
+            android:padding="5dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView3">
+            -->
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/textInputLayout2"
+            android:layout_width="246dp"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/btn_mensaje"
             android:hint="Ingrese su mensaje ..."
-            android:inputType="textMultiLine"
-            android:lines="1"
-            android:paddingLeft="10dp" />
+
+            android:padding="5dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView3">
+
+            <EditText
+                android:id="@+id/message"
+                android:layout_width="223dp"
+                android:layout_height="40dp"
+                android:layout_marginBottom="5dp"
+
+                android:layout_weight="3"
+                android:inputType="textMultiLine"
+                android:lines="1"
+
+                android:textColor="@color/cardview_dark_background"
+                android:textColorHint="@color/cardview_dark_background" />
+        </android.support.design.widget.TextInputLayout>
 
         <!--<Button android:id="@+id/btn_send"
             android:layout_width="0dp"
@@ -65,11 +90,17 @@ android:textColor="@color/cardview_dark_background"
             android:id="@+id/btn_send"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_marginBottom="10dp"
+
+            android:layout_marginLeft="7dp"
+            android:layout_marginRight="7dp"
             android:layout_weight="1"
-android:background="@drawable/border_send"
-            android:elevation="0dp"
+            android:background="@drawable/border_send"
+            android:elevation="4dp"
+            android:paddingBottom="10dp"
+            android:paddingEnd="5dp"
             android:paddingLeft="10dp"
+            android:paddingStart="10dp"
+            android:paddingTop="10dp"
             android:scaleType="fitCenter"
             android:src="@drawable/send" />
 
