--- a/app/src/main/res/layout/activity_splach2.xml
+++ b/app/src/main/res/layout/activity_splach2.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bg_colorbot"
-    tools:context="com.example.vmac.WatBot.Splach2Activity">
+    tools:context="com.example.vmac.WatBot.Activities.Splach2Activity">
 
 
     <pl.droidsonroids.gif.GifImageView
