--- a/app/src/main/res/layout/content_chat_room.xml
+++ b/app/src/main/res/layout/content_chat_room.xml
@@ -5,14 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.vmac.WatBot.MainActivity"
-    tools:showIn="@layout/activity_main">
+    tools:context="com.example.vmac.WatBot.Activities.PrincipalActivity"
+    tools:showIn="@layout/fragment_chat">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="70dp"
+        android:layout_above="@+id/linearLayout"
+        android:layout_alignParentStart="true"
         android:background="@color/cardview_dark_background"
         android:scrollbars="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
@@ -25,7 +26,8 @@
         android:background="@android:color/transparent"
         android:orientation="horizontal"
         android:padding="7dp"
-        android:weightSum="4">
+        android:weightSum="4"
+        android:id="@+id/linearLayout">
 
         <android.support.v7.widget.AppCompatImageButton
             android:id="@+id/btn_record"
@@ -53,7 +55,7 @@
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/textInputLayout2"
-            android:layout_width="246dp"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:background="@drawable/btn_mensaje"
@@ -64,7 +66,7 @@
 
             <EditText
                 android:id="@+id/message"
-                android:layout_width="223dp"
+                android:layout_width="200dp"
                 android:layout_height="40dp"
                 android:layout_marginBottom="5dp"
 
