--- a/app/src/main/res/layout/chat_item_self.xml
+++ b/app/src/main/res/layout/chat_item_self.xml
@@ -1,11 +1,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="10dp"
     android:gravity="right"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:paddingBottom="5dp"
     android:paddingLeft="16dp">
 
@@ -19,32 +19,22 @@
         android:fontFamily="sans-serif" />-->
 
     <com.github.library.bubbleview.BubbleTextView
+        android:id="@+id/message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="7dp"
-        android:textSize="17dp"
         android:textColor="@android:color/white"
-        app:arrowWidth="8dp"
+        android:textSize="17dp"
         app:angle="8dp"
 
-        android:id="@+id/message"
-        app:arrowHeight="14dp"
-        app:arrowPosition="14dp"
-        app:arrowLocation="right"
         app:arrowCenter="true"
-        app:bubbleColor="#FF5722"/>
+        app:arrowHeight="14dp"
+        app:arrowLocation="right"
+        app:arrowPosition="14dp"
+        app:arrowWidth="8dp"
+        app:bubbleColor="#FF5722" />
 
-    <!--<TextView
-        android:id="@+id/message"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="10dp"
-        android:background="@android:color/holo_orange_dark"
-        android:padding="7dp"
-        android:textColor="@android:color/white"
-        android:textIsSelectable="true"
-        android:textSize="18sp" />-->
+
 
 
 </LinearLayout>
