--- a/app/src/main/res/layout/fragment_cursos.xml
+++ b/app/src/main/res/layout/fragment_cursos.xml
@@ -2,14 +2,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragments.ListadoFragment">
+    tools:context=".Fragments.CursosFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+
+
     <android.support.v7.widget.RecyclerView
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:id="@+id/recyclerview"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"/>
+
+
+
 
 </FrameLayout>
