--- a/app/src/main/res/layout/item_pfr.xml
+++ b/app/src/main/res/layout/item_pfr.xml
@@ -10,57 +10,48 @@
     android:layout_marginBottom="8dp"
     android:focusable="true"
     android:clickable="true"
-    android:background="@android:color/white"
     android:foreground="?android:attr/selectableItemBackground">
-
 
     <RelativeLayout
         android:layout_width="match_parent"
+        android:background="@color/cardview_light_background"
+
         android:layout_height="wrap_content"
-        android:padding="16dp">
+        android:padding="16dp" >
 
         <ImageView
             android:id="@+id/foto_image"
-            android:layout_width="wrap_content"
-            android:layout_height="70dp"
-            android:layout_marginBottom="5dp"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
+            android:layout_width="64dp"
+            android:layout_height="80dp"
+            android:layout_alignParentStart="true"
+            android:layout_marginEnd="16dp"
             android:scaleType="fitXY"
             app:srcCompat="@mipmap/ic_launcher" />
 
         <TextView
             android:id="@+id/nombre_text"
             android:layout_width="match_parent"
-
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/foto_image"
+            android:layout_toEndOf="@+id/foto_image"
             android:text="Nombre del producto"
-            android:textSize="18sp"
+            android:textColor="@color/cast_expanded_controller_background_color"
+            android:textSize="20sp"
             android:textStyle="bold" />
-
-
-        <TextView
-            android:id="@+id/carreras_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/nombre_text"
-            android:layout_marginBottom="8dp"
-            android:textSize="16sp"
-            android:text="carreras descripcion"/>
 
         <TextView
             android:id="@+id/sede_text"
-            android:layout_width="match_parent"
+            android:background="@drawable/shape_sedes"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/carreras_text"
-            android:layout_marginBottom="8dp"
-            android:textSize="16sp"
-            android:text="sede"/>
+            android:layout_below="@+id/nombre_text"
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            android:layout_toEndOf="@+id/foto_image"
+            android:text="sede"
+            android:textColor="@color/cast_expanded_controller_background_color"
+            android:textSize="14sp" />
 
 
     </RelativeLayout>
-
 
 </android.support.v7.widget.CardView>
