--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -9,7 +9,7 @@
             android:id="@+id/nav_home"
             android:checked="true"
             android:icon="@android:drawable/ic_menu_myplaces"
-            android:title="Inicio" />
+            android:title="Cursos Online" />
 
         <item
             android:id="@+id/nav_gallery"
@@ -24,7 +24,7 @@
         <item
             android:id="@+id/nav_locations"
             android:icon="@android:drawable/ic_menu_mapmode"
-            android:title="Sedes" />
+            android:title="Cursos" />
 
     </group>
 
